Fix Bug 365192 kaddressbook corrupts or discards information in it does not know (carddav)

Fix group support
BUG: 365192

FIXED-IN: 5.3